force-app/main/default/objects/BMCServiceDesk__BroadcastHistory__c/BMCServiceDesk__BroadcastHistory__c.object-meta.xml
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpBroadcastHistory</customHelpPage>
    <description>This object allows you to store data that tracks the history of all actions that have been performed on broadcasts.</description>
    <label>Broadcast History</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Broadcast History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>