force-app/main/default/objects/BMCServiceDesk__BroadcastHistory__c/fields/BMCServiceDesk__actionId__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__actionId__c</fullName>
    <formula>BMCServiceDesk__FKActions__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From the list of options, select the user-defined actions that are applicable to broadcasts. User-defined actions are used to record details of the steps taken to manage the issue or outage that caused the broadcast.</inlineHelpText>
    <label>Action~</label>
    <type>Text</type>
</CustomField>