force-app/main/default/objects/BMCServiceDesk__BroadcastHistory__c/fields/BMCServiceDesk__broadCastId__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__broadCastId__c</fullName>
    <formula>BMCServiceDesk__FKBroadcast__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broadcast ID~</label>
    <type>Text</type>
</CustomField>