force-app/main/default/objects/BMCServiceDesk__BroadcastHistory__c/fields/BMCServiceDesk__date__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__date__c</fullName>
    <inlineHelpText>This field is automatically set to the date and time at which the history record is created. If required, you can use this field to select a different date and time from the automatically filled in date and time for user-defined actions.</inlineHelpText>
    <label>Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>