force-app/main/default/objects/BMCServiceDesk__BroadcastHistory__c/fields/BMCServiceDesk__FKActions__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKActions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>From the list of options, select the user-defined actions that are applicable to broadcasts. User-defined actions are used to record details of the steps taken to manage the issue or outage that caused the broadcast.</inlineHelpText>
    <label>Action</label>
    <referenceTo>BMCServiceDesk__Action__c</referenceTo>
    <relationshipLabel>Broadcast History</relationshipLabel>
    <relationshipName>Broadcast_Histroy</relationshipName>
    <type>Lookup</type>
</CustomField>