force-app/main/default/objects/BMCServiceDesk__BroadcastHistory__c/fields/BMCServiceDesk__FKBroadcast__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKBroadcast__c</fullName>
    <label>Broadcast ID</label>
    <referenceTo>BMCServiceDesk__Broadcasts__c</referenceTo>
    <relationshipLabel>Action History</relationshipLabel>
    <relationshipName>Broadcast_Histroy</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>