force-app/main/default/objects/BMCServiceDesk__BroadcastHistory__c/fields/BMCServiceDesk__FKUser__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field is automatically set to the user who created the history record.</inlineHelpText>
    <label>Sender</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Broadcast_Histroy</relationshipName>
    <type>Lookup</type>
</CustomField>