force-app/main/default/objects/BMCServiceDesk__BroadcastHistory__c/fields/BMCServiceDesk__userId__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__userId__c</fullName>
    <formula>BMCServiceDesk__FKUser__r.Username</formula>
    <inlineHelpText>This field is automatically set to the username of the user who created the history record.</inlineHelpText>
    <label>Staff ID~</label>
    <type>Text</type>
</CustomField>