force-app/main/default/objects/BMCServiceDesk__BroadcastHistory__c/validationRules/BMCServiceDesk__actionIDRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__actionIDRequired</fullName>
    <active>true</active>
    <errorConditionFormula>OR( ISNULL(BMCServiceDesk__FKActions__c) , ISBLANK(BMCServiceDesk__FKActions__c))</errorConditionFormula>
    <errorMessage>Please enter Action.</errorMessage>
</ValidationRule>