force-app/main/default/objects/BMCServiceDesk__BroadcastHistory__c/validationRules/BMCServiceDesk__broadcastHistoryStaffIDRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__broadcastHistoryStaffIDRequired</fullName>
    <active>true</active>
    <errorConditionFormula>OR( ISNULL(BMCServiceDesk__FKUser__c) , ISBLANK(BMCServiceDesk__FKUser__c))</errorConditionFormula>
    <errorMessage>Please enter Staff ID</errorMessage>
</ValidationRule>